--- a/burhan_part.html
+++ b/burhan_part.html
@@ -3,7 +3,7 @@
   <head>
     <title>JAKARTA -Saving the World’s Fastest Sinking City</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Lama Alswliman, Wing Ka Ho, Madeleinei Potter,Geetanjli Rani &amp; Burhan Ahmad Wani" />
+    <meta name="author" content="Burhan Ahmad Wani" />
     <script src="libs/header-attrs-2.25/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
@@ -19,7 +19,7 @@ class: center, middle, inverse, title-slide
 ## Group Work
 ]
 .author[
-### Lama Alswliman, Wing Ka Ho, Madeleinei Potter,Geetanjli Rani &amp; Burhan Ahmad Wani
+### Burhan Ahmad Wani
 ]
 .institute[
 ### University College London(UCL)
@@ -30,91 +30,7 @@ class: center, middle, inverse, title-slide
 
 ---
 
-class: center, middle
-### Budget Breakdown
-&lt;table&gt;
- &lt;thead&gt;
-  &lt;tr&gt;
-   &lt;th style="text-align:left;"&gt; Role &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; Acronym &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; Salary/Month (IDR) &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; Salary/Month (GBP) &lt;/th&gt;
-   &lt;th style="text-align:left;"&gt; Cost/Year (GBP) &lt;/th&gt;
-  &lt;/tr&gt;
- &lt;/thead&gt;
-&lt;tbody&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Team Leader &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; TL &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; IDR 49,560,355 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; £ 2500 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 30000 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Lead Data Analyst &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; LDA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; IDR 29,736,213 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; £ 1500 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 18000 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Geospatial Expert &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; GE &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; IDR 19,824,142 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; £ 1000 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 12000 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Water Resource Expert &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; WRE &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; IDR 19,824,142 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; £ 1000 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 12000 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Nodal Official &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NO &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; IDR 15,859,313 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; £ 800 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 9600 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; (A) Total Salary  Cost for Project &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; £ 81,600 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; (B)  Travel Cost for the Project &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; £ 30,000 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; (C) Stakeholder Engagement Cost for Project &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; £ 20,000 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; (D) Extingencies (5% of A+B+C ) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; £ 7,580 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Total Expenditure &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; NA &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; £ 159,180 &lt;/td&gt;
-  &lt;/tr&gt;
-&lt;/tbody&gt;
-&lt;/table&gt;
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
