made format for easy edits for the rest of the group

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>JAKARTA -Saving the World’s Fastest Sinking City</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Lama Alswliman, Wing Ka Ho, Madeleinei Potter,Geetanjli Rani &amp; Burhan Ahmad Wani" />
+    <meta name="author" content="Lama Alswliman, Wing Ka Ho, Madeleinei Potter, Geetanjli Rani &amp; Burhan Ahmad Wani" />
     <script src="libs/header-attrs-2.25/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
@@ -19,7 +19,7 @@ class: center, middle, inverse, title-slide
 ## Group Work
 ]
 .author[
-### Lama Alswliman, Wing Ka Ho, Madeleinei Potter,Geetanjli Rani &amp; Burhan Ahmad Wani
+### Lama Alswliman, Wing Ka Ho, Madeleinei Potter, Geetanjli Rani &amp; Burhan Ahmad Wani
 ]
 .institute[
 ### University College London(UCL)
@@ -30,6 +30,48 @@ class: center, middle, inverse, title-slide
 
 ---
 
+
+## Context &amp; Background
+
+1. Jakarta is home to significant financial institutions like the Indonesia Stock Exchange and the Bank of Indonesia, along with serving as the corporate headquarters for numerous Indonesian companies and multinational corporations. This underscores its pivotal role in the country's economy.
+
+1. The area of Jakarta is 661.5km2 and is divided to five administrative cities of South Jakarta, Central Jakarta, East Jakarta, West Jakarta, and North Jakarta.
+
+1. Total population is 10 million within the city, while the total population of the entire metro area is 30 million. 
+
+---
+class: center, top
+
+## Problem Statement
+
+
+---
+class: center, top
+
+## Criticism of Approach
+
+
+
+
+
+---
+class: center, top
+
+## Methodology
+
+
+
+
+
+---
+class: center, top
+
+## Plan
+
+
+
+
+---
 class: center, middle
 ### Budget Breakdown
 &lt;table&gt;
@@ -115,6 +157,20 @@ class: center, middle
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
+
+
+---
+class: center, top
+
+## Recommendations
+
+
+
+
+---
+class: center, top
+
+## References
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
