--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x376b9d390f04c07b97fd694cd35eba8","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"a74d5bf5865448358d8eedb2fc10cd7d","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
     <script src="libs/xaringanExtra_fit-screen-0.2.6/fit-screen.js"></script>
     <link href="libs/xaringanExtra-extra-styles-0.2.6/xaringanExtra-extra-styles.css" rel="stylesheet" />
+    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
+    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
+    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
+    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
+    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
+    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
+    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
   </head>
   <body>
     <textarea id="source">
@@ -62,11 +69,7 @@ class: center, middle, inverse, title-slide
 
 
 
-```
-## Warning: package 'countdown' was built under R version 4.3.3
-```
 
----
 
 # The significance of Jakarta
 
@@ -100,6 +103,7 @@ class: center, top
 
 
 ---
+
 class: center, top
 
 ## Criticism of Approach
@@ -109,6 +113,7 @@ class: center, top
 
 
 ---
+
 class: center, top
 
 ## Methodology
@@ -118,6 +123,7 @@ class: center, top
 
 
 ---
+
 class: center, top
 
 ## Plan
@@ -214,6 +220,7 @@ class: center, middle
 
 
 ---
+
 class: center, top
 
 ## Recommendations
@@ -222,6 +229,7 @@ class: center, top
 
 
 ---
+
 class: center, top
 
 ## References
