--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>JAKARTA -Saving the World’s Fastest Sinking City</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Lama Alswliman, Wing Ka Ho, Madeleinei Potter, Geetanjli Rani &amp; Burhan Ahmad Wani" />
+    <meta name="author" content="Lama Alswliman, Wing Ka Ho, Madeleine Potter, Geetanjli Rani &amp; Burhan Ahmad Wani" />
     <script src="libs/header-attrs-2.25/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
@@ -31,7 +31,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"f68159fa14874ef9905565e66a9694a0","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xe08f2aba2cc4de59ed12f424627f07a","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -56,16 +56,17 @@ class: center, middle, inverse, title-slide
 ## Group Work
 ]
 .author[
-### Lama Alswliman, Wing Ka Ho, Madeleinei Potter, Geetanjli Rani &amp; Burhan Ahmad Wani
+### Lama Alswliman, Wing Ka Ho, Madeleine Potter, Geetanjli Rani &amp; Burhan Ahmad Wani
 ]
 .institute[
-### University College London(UCL)
+### University College London
 ]
 .date[
-### 2016/12/12 (updated: 2024-03-14)
+### 2024/03/19 (updated: 2024-03-14)
 ]
 
 ---
+
 
 
 
@@ -148,7 +149,7 @@ class: center, top
 
 1. Validate the model using the testing data. 
 
-1. Map out land subsidence susceptibility that identifies areas of very high, high, medium, low and very low susceptibility. 
+1. Map out land subsidence susceptibility that identifies areas of very high, high, moderate, low and very low susceptibility. 
 
 ---
 ## Methodology: Risk Mapping 
@@ -161,33 +162,31 @@ class: center, top
 
 1. Combine hazard and vulnerability maps by producing a risk index.
 
-1. Using risk index, produce a risk map showing areas at very high risk, high risk, medium risk, low risk and very low risk.
+1. Using risk index, produce a risk map showing areas at very high risk, high risk, moderate risk, low risk and very low risk.
 
 ---
-## Example Outputs
+## Example Outputs 
 
 .pull-left[
 
-Susceptibility Map
+Susceptibility Map 
 
-&lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="eg_susceptibility.png" alt="From:" width="80%" /&gt;
-&lt;p class="caption"&gt;From:&lt;/p&gt;
-&lt;/div&gt;
+&lt;img src="eg_susceptibility.png" width="90%" style="display: block; margin: auto;" /&gt;
+
+From: &lt;a name=cite-gharechaeeLandSubsidenceSusceptibility2023&gt;&lt;/a&gt;[Gharechaee, Samani, Sigaroodi, Baloochiyan, Moosavi, Hubbart, and Sadeghi (2023)](#bib-gharechaeeLandSubsidenceSusceptibility2023)
 
 ]
 
 .pull-right[
 
-Risk Map
-&lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="eg_risk.png" alt="From:" width="77%" /&gt;
-&lt;p class="caption"&gt;From:&lt;/p&gt;
-&lt;/div&gt;
+Risk Map 
 
+&lt;img src="eg_risk.png" width="87%" style="display: block; margin: auto;" /&gt;
+
+From: &lt;a name=cite-bhattaraiRiskAssessmentLand2017&gt;&lt;/a&gt;[Bhattarai and Kondoh (2017)](#bib-bhattaraiRiskAssessmentLand2017)
 ]
 
-https://www.mdpi.com/2073-445X/12/4/843
+
 
 ---
 
