--- a/index.html
+++ b/index.html
@@ -31,17 +31,12 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-<<<<<<< HEAD
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xe08f2aba2cc4de59ed12f424627f07a","expires":1}</script>
-=======
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xac1467e9b5e44008e1412959e43be5a","expires":1}</script>
->>>>>>> 5901b1f3e14f29d5e26fd3803a669839c42069eb
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x6db894a5cc742e2a625b70072b5163d","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
     <script src="libs/xaringanExtra_fit-screen-0.2.6/fit-screen.js"></script>
     <link href="libs/xaringanExtra-extra-styles-0.2.6/xaringanExtra-extra-styles.css" rel="stylesheet" />
-    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
@@ -72,7 +67,6 @@ class: center, middle, inverse, title-slide
 ]
 
 ---
-
 
 
 
@@ -171,7 +165,150 @@ class: center, top
 1. Using risk index, produce a risk map showing areas at very high risk, high risk, moderate risk, low risk and very low risk.
 
 ---
-## Example Outputs 
+## Data
+.panelset[
+.panel[.panel-name[Conditional Settings]
+
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt; Variable &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Source &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Spatial resolution &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Temporal resolution &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Cost &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; Elevation &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; NASADEM Merged DEM Global 1 arc second V001 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 m x 30 m &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open Data Source) &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; Slope &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; NASADEM Merged DEM Global 1 arc second V001 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 m x 30 m &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open Data Source) &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; Curvature &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; NASADEM Merged DEM Global 1 arc second V001 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 m x 30 m &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open Data Source) &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; TWI &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Sentinel 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 10 m x 10 m &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 10 days &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open Data Source) &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; NDVI &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Sentinel 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 10 m x 10 m &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 10 days &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open Data Source) &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; Lithology &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; GLIM (Global Lithological Map) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1:3,7500,000 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open Data Source) &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; Land use &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Sentinel 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 10 m x 10 m &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 10 days &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open Data Source) &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; Ground water extraction &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Ministry of Energy and Mineral Resources  &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open Data Source) &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; Distance to fault &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; GEM Global Active Faults (Shapefile) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open Data Source) &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+]
+
+.panel[.panel-name[Previous Land Subsidence]
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt; Variable &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Source &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Spatial resolution &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Temporal resolution &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Cost &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; Historical Land Subsidence &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Sentinel 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 5 m x 5 m &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 6 days &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open data source) &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+]
+
+.panel[.panel-name[Socio-economic Settings]
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt; Variable &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Source &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Spatial resolution &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Temporal resolution &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Cost &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; Population Density &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; WorldPop &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open data source) &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; Building Footprints &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Open Buildings &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; - &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open data source) &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; Land use &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Sentinel 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 10 m x 10 m &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 10 days &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Free (Open Data Source) &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+]
+]
+---
+## Example Outputs
 
 .pull-left[
 
