--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x31ea88d67e44ae796caa408bbe8632f","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xde7377da6a74a6cb5e8a558f3b31a69","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -121,7 +121,26 @@ class: center, top
 
 
 
------
+---
+## Criticism to the wall approach
+.pull-left[
+* Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Nunn et al., 2021)
+
+* It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
+
+* High cost of construction and maintenance. 
+
+* Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
+]
+
+.pull-right[
+
+* Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches.
+
+* The build of the sea wall can have a terrible impact on the socio-economic aspect of Jakarta city.
+
+]
+---
 
 
 ## Objectives
@@ -342,10 +361,10 @@ From: &lt;a name=cite-bhattaraiRiskAssessmentLand2017&gt;&lt;/a&gt;[Bhattarai an
 
 class: center, top
 
-## Plan
+## Recommendation Action Plan
 
 
-
+&lt;img src="SlideRA.jpg" width="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 class: center, top
