--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x520f7b3b5aa4d10b3a1d5699ee61fe5","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x7ad90fdcf9c4080a90db4a97a55f3a6","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
     <script src="libs/xaringanExtra_fit-screen-0.2.6/fit-screen.js"></script>
     <link href="libs/xaringanExtra-extra-styles-0.2.6/xaringanExtra-extra-styles.css" rel="stylesheet" />
+    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
@@ -99,7 +100,6 @@ class: center, middle, inverse, title-slide
   
 ---
 
-class: center, top
 
 ## Highlighting the problem 
 
@@ -123,6 +123,7 @@ class: center, top
 
 ]
 ]
+
 ---
 
 
@@ -134,7 +135,6 @@ class: center, top
 
 * Natural consolidation of alluvium soil, load of infrastructures and constructions, and tectonic activities 
 
-
 ---
 
 
@@ -143,6 +143,8 @@ class: center, top
 
 
 ---
+
+
 ## Impact of land subsidence  
 
 .panelset[
