agendas and goals commit

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x7ad90fdcf9c4080a90db4a97a55f3a6","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xe8d6bf5eed94a728b157f83381a6cee","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -65,7 +65,7 @@ class: center, middle, inverse, title-slide
 ### University College London
 ]
 .date[
-### 2024/03/19 (updated: 2024-03-14)
+### 2024/03/19 (updated: 2024-03-15)
 ]
 
 ---
@@ -121,6 +121,91 @@ class: center, middle, inverse, title-slide
 
 * Land subsidence in Jakarta displays spatial and temporal variations, typically occurring at rates of approximately 3 to 10 centimetre's per year. Currently, detailed understanding of the characteristics and mechanisms of land subsidence in Jakarta, both spatially and temporally, remains incomplete. Furthermore, accurately estimating and modelling the contribution of each causative factor to observed land subsidence in specific areas is still necessary
 
+]
+]
+
+---
+## Global agendas and goals 1
+###  The Sendai Framework for Disaster Risk Reduction (2015)
+
+.pull-left[
+&lt;img src="SendaiFramrwork.jpeg" width="80%" /&gt;
+]
+.pull-right[
+
+
+* To understand disaster risk
+
+* To reduce vulnerability of coastal regions by enhancing resilience capacity e.g., preparedness to disasters
+
+* To strengthen local governance towards disaster risk management in accordance with this global framework -- a top down approach
+
+* Recognises the state has the primary role for DRR
+
+* Stakeholders should share the responsibility with the state
+
+
+]
+---
+## Global agendas and goals 2
+### Sustainable Development Goals (SDGs)
+.panelset[
+.panel[.panel-name[SDG 6]
+
+.pull-left[
+
+&lt;img src="E_PRINT_06.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 6.4**
+
+* By 2030, substantially increase water-use efficiency across all sectors and ensure sustainable withdrawals and supply of freshwater to address water scarcity and substantially reduce the number of people suffering from water scarcity
+]
+
+
+]
+
+.panel[.panel-name[SDG 11]
+.pull-left[
+
+&lt;img src="E_PRINT_11.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 11.3**
+
+* By 2030, enhance inclusive and sustainable urbanization and capacity for participatory, integrated and sustainable human settlement planning and management in all countries
+]
+
+
+]
+
+.panel[.panel-name[SDG 13]
+.pull-left[
+
+&lt;img src="E_PRINT_13.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 13.1**
+
+* Strengthen resilience and adaptive capacity to climate-related hazards and natural disasters in all countries
+
+**Target 13.2**
+* Integrate climate change measures into national policies, strategies and planning
+
+]
+
+]
+
+
+.panel[.panel-name[SDG 15]
+.pull-left[
+&lt;img src="E_PRINT_15.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 15.3**
+
+* By 2030, combat desertification, restore degraded land and soil, including land affected by desertification, drought and floods, and strive to achieve a land degradation-neutral world
+]
 ]
 ]
 
