--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"e28e794ef02d429d9896f1ce49981197","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xc9639832036415d9d23ebf48caab2e5","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -44,6 +44,7 @@
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script src="libs/kePrint-0.0.1/kePrint.js"></script>
     <link href="libs/lightable-0.0.1/lightable.css" rel="stylesheet" />
+    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
   </head>
@@ -64,7 +65,7 @@ class: center, middle, inverse, title-slide
 ### University College London
 ]
 .date[
-### 2024/03/19 (updated: 2024-03-14)
+### 2024/03/19 (updated: 2024-03-15)
 ]
 
 ---
@@ -99,20 +100,125 @@ class: center, middle, inverse, title-slide
   
 ---
 
-class: center, top
 
-## Problem Statement
+## Highlighting the problem 
 
+.panelset[
+
+.panel[.panel-name[The Sinking Capital]
+
+* Jakarta, the capital of Indonesia, has been at risk of becoming the first megacity to completely sink. This is attributed to factors such as rising sea levels, land subsidence, construction on soft sediments, and natural sediment compaction. The northern part of Jakarta currently sits approximately 2.5 meters below sea level, with estimates indicating that by 2050, 40% of the area will be sunk. Each year, Jakarta experiences between 1 to 10 sinking incidents. 
+
+]
+
+.panel[.panel-name[Jakrta Master Plan]
+
+* To protect Jakarta the government came up with an idea of building a wall on the city cost line, in 2008 this wall was created but, due to the subsidence this sea wall is already at a critically low level.
+
+]
+
+.panel[.panel-name[The Main Cause]
+
+* Land subsidence in Jakarta displays spatial and temporal variations, typically occurring at rates of approximately 3 to 10 centimetre's per year. Currently, detailed understanding of the characteristics and mechanisms of land subsidence in Jakarta, both spatially and temporally, remains incomplete. Furthermore, accurately estimating and modelling the contribution of each causative factor to observed land subsidence in specific areas is still necessary
+
+]
+]
+
+---
+## Global agendas and goals 1
+###  The Sendai Framework for Disaster Risk Reduction (2015)
+
+.pull-left[
+&lt;img src="SendaiFramrwork.jpeg" width="80%" /&gt;
+]
+.pull-right[
+
+
+* To understand disaster risk
+
+* To reduce vulnerability of coastal regions by enhancing resilience capacity e.g., preparedness to disasters
+
+* To strengthen local governance towards disaster risk management in accordance with this global framework -- a top down approach
+
+* Recognises the state has the primary role for DRR
+
+* Stakeholders should share the responsibility with the state
+
+
+]
+---
+## Global agendas and goals 2
+### Sustainable Development Goals (SDGs)
+.panelset[
+.panel[.panel-name[SDG 6]
+
+.pull-left[
+
+&lt;img src="E_PRINT_06.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 6.4**
+
+* By 2030, substantially increase water-use efficiency across all sectors and ensure sustainable withdrawals and supply of freshwater to address water scarcity and substantially reduce the number of people suffering from water scarcity
+]
+
+
+]
+
+.panel[.panel-name[SDG 11]
+.pull-left[
+
+&lt;img src="E_PRINT_11.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 11.3**
+
+* By 2030, enhance inclusive and sustainable urbanization and capacity for participatory, integrated and sustainable human settlement planning and management in all countries
+]
+
+
+]
+
+.panel[.panel-name[SDG 13]
+.pull-left[
+
+&lt;img src="E_PRINT_13.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 13.1**
+
+* Strengthen resilience and adaptive capacity to climate-related hazards and natural disasters in all countries
+
+**Target 13.2**
+* Integrate climate change measures into national policies, strategies and planning
+
+]
+
+]
+
+
+.panel[.panel-name[SDG 15]
+.pull-left[
+&lt;img src="E_PRINT_15.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 15.3**
+
+* By 2030, combat desertification, restore degraded land and soil, including land affected by desertification, drought and floods, and strive to achieve a land degradation-neutral world
+]
+]
+]
 
 ---
 
-class: center, top
 
-## Criticism of Approach
+## Causes of Subsidence
 
+* Physical factors for land subsidence: earthquakes (Indonesia is locating above the destructive plate boundaries where earthquakes happened frequently) (Bott et al., 2021).
 
+* Human/ social factor for land subsidence: groundwater extraction, rapid urban development, improper agricultural practices (Adibin et al., 2011)
 
-
+* Natural consolidation of alluvium soil, load of infrastructures and constructions, and tectonic activities 
 
 ---
 
@@ -120,6 +226,65 @@ class: center, top
 ## Benefits to Addressing Land Subsidence
 
 
+
+---
+
+
+## Impact of land subsidence  
+
+.panelset[
+
+.panel[.panel-name[Infrastructure]
+
+* Cracking of permanent constructions and roads.
+
+* Tilting of houses and buildings.
+
+* “Sinking” of houses and buildings.
+
+* Breaking of underground pipelines and utilities.
+
+* Malfunction of sewerage and drainage system 
+ 
+* Deterioration in function of building and infrastructures
+
+]
+
+.panel[.panel-name[Environment]
+
+* Changes in river canal and drain flow systems indirect.
+
+* Frequent coastal flooding.
+
+* Wider expansion of flooding areas. 
+
+* Inundated areas and infrastructures.
+
+* Increased inland sea water intrusion.
+
+* Deterioration in quality of environmental condition
+
+]
+
+.panel[.panel-name[Economic]
+
+* Increase in maintenance cost of infrastructure.
+
+* decrease in land and property values.
+
+* Abandoned buildings and facilities.
+
+* Disruption to economic activities
+]
+
+.panel[.panel-name[Social]
+
+* Deterioration in quality of living environment and life health and 
+
+
+* disruprion to daily activities of people.
+]
+]
 
 ---
 ## Criticism to the wall approach
@@ -192,10 +357,11 @@ class: center, top
 
 ---
 ## Data
+
 .panelset[
 .panel[.panel-name[Conditional Settings]
 
-&lt;table&gt;
+&lt;table class="table" style="font-size: 10px; width: auto !important; margin-left: auto; margin-right: auto;"&gt;
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt; Variable &lt;/th&gt;
@@ -274,7 +440,7 @@ class: center, top
 ]
 
 .panel[.panel-name[Previous Land Subsidence]
-&lt;table&gt;
+&lt;table class="table" style="font-size: 12px; width: auto !important; margin-left: auto; margin-right: auto;"&gt;
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt; Variable &lt;/th&gt;
@@ -297,7 +463,7 @@ class: center, top
 ]
 
 .panel[.panel-name[Socio-economic Settings]
-&lt;table&gt;
+&lt;table class="table" style="font-size: 12px; width: auto !important; margin-left: auto; margin-right: auto;"&gt;
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt; Variable &lt;/th&gt;
