adding gif of jakarta sinking

--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xc9639832036415d9d23ebf48caab2e5","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"b856d45d8cce4c0ba5ef4d9925434f0a","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
     <script src="libs/xaringanExtra_fit-screen-0.2.6/fit-screen.js"></script>
     <link href="libs/xaringanExtra-extra-styles-0.2.6/xaringanExtra-extra-styles.css" rel="stylesheet" />
-    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
@@ -65,7 +64,7 @@ class: center, middle, inverse, title-slide
 ### University College London
 ]
 .date[
-### 2024/03/19 (updated: 2024-03-15)
+### 2024/03/19
 ]
 
 ---
@@ -111,9 +110,11 @@ class: center, middle, inverse, title-slide
 
 ]
 
-.panel[.panel-name[Jakrta Master Plan]
+.panel[.panel-name[NCICD]
 
-* To protect Jakarta the government came up with an idea of building a wall on the city cost line, in 2008 this wall was created but, due to the subsidence this sea wall is already at a critically low level.
+* To protect Jakarta from coastal flooding, the National Capital Integrated Coastal Development (NCID) was developed, with the main plan surrounding the construction of a sea wall which could reach 32km in length .
+
+
 
 ]
 
@@ -210,6 +211,8 @@ class: center, middle, inverse, title-slide
 ]
 
 ---
+![](jakarta_sinking_animated.gif)&lt;!-- --&gt;
+
 
 
 ## Causes of Subsidence
@@ -219,13 +222,6 @@ class: center, middle, inverse, title-slide
 * Human/ social factor for land subsidence: groundwater extraction, rapid urban development, improper agricultural practices (Adibin et al., 2011)
 
 * Natural consolidation of alluvium soil, load of infrastructures and constructions, and tectonic activities 
-
----
-
-
-## Benefits to Addressing Land Subsidence
-
-
 
 ---
 
@@ -285,6 +281,19 @@ class: center, middle, inverse, title-slide
 * disruprion to daily activities of people.
 ]
 ]
+
+---
+
+
+## Benefits to Addressing Land Subsidence
+
+- Reduced loss of land.
+
+- Reduced damage to infrastructure such as roads and buildings.
+
+- Reduced flood risk.
+
+- Protection of businesses and industry such as coastal tourism. 
 
 ---
 ## Criticism to the wall approach
