--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"a1e3dadbe3164ec38ebad441e6861738","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x183bce7959f4c5da8e77c48aee36d9c","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -295,7 +295,7 @@ class: center, middle, inverse, title-slide
 
 - Protection of businesses and industry such as coastal tourism. 
 
-- To avoid damage of infrastructure 
+- To ensure clean groundwater supply by avoiding seawater intrusion to groundwater table
 
 ---
 ## Criticism to the wall approach
@@ -519,7 +519,7 @@ Susceptibility Map
 
 &lt;img src="eg_susceptibility.png" width="90%" style="display: block; margin: auto;" /&gt;
 
-From: [Gharechaee, Samani, Sigaroodi et al. (2023)](#bib-gharechaeeLandSubsidenceSusceptibility2023)
+From: &lt;a name=cite-gharechaeeLandSubsidenceSusceptibility2023&gt;&lt;/a&gt;[Gharechaee, Samani, Sigaroodi, Baloochiyan, Moosavi, Hubbart, and Sadeghi (2023)](#bib-gharechaeeLandSubsidenceSusceptibility2023)
 
 ]
 
@@ -529,7 +529,7 @@ Risk Map
 
 &lt;img src="eg_risk.png" width="87%" style="display: block; margin: auto;" /&gt;
 
-From: [Bhattarai and Kondoh (2017)](#bib-bhattaraiRiskAssessmentLand2017)
+From: &lt;a name=cite-bhattaraiRiskAssessmentLand2017&gt;&lt;/a&gt;[Bhattarai and Kondoh (2017)](#bib-bhattaraiRiskAssessmentLand2017)
 ]
 
 
