--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x183bce7959f4c5da8e77c48aee36d9c","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x0c3d577c6894afa90f12c63df8e26bc","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -277,8 +277,10 @@ class: center, middle, inverse, title-slide
 
 * Deterioration in quality of living environment and life health and 
 
+* Possibility of seawater intrusion to the lowered groundwater table, thus lack of clean water supply
 
-* disruprion to daily activities of people.
+
+* Disruption to daily activities of people.
 ]
 ]
 
