--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"a1e3dadbe3164ec38ebad441e6861738","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x30ae37f36144a649926438706aa53cd","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
     <script src="libs/xaringanExtra_fit-screen-0.2.6/fit-screen.js"></script>
     <link href="libs/xaringanExtra-extra-styles-0.2.6/xaringanExtra-extra-styles.css" rel="stylesheet" />
+    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
@@ -126,6 +127,97 @@ class: center, middle, inverse, title-slide
 ]
 
 ---
+![](jakarta_sinking_animated.gif)&lt;!-- --&gt;
+
+## Causes of Subsidence
+
+* Physical factors for land subsidence: earthquakes (Indonesia is locating above the destructive plate boundaries where earthquakes happened frequently) (Bott et al., 2021).
+
+* Human/ social factor for land subsidence: groundwater extraction, rapid urban development, improper agricultural practices (Adibin et al., 2011)
+
+* Natural consolidation of alluvium soil, load of infrastructures and constructions, and tectonic activities.
+
+---
+
+
+## Impact of land subsidence  
+
+.panelset[
+
+.panel[.panel-name[Infrastructure]
+
+* Cracking of permanent constructions and roads.
+
+* Tilting of houses and buildings.
+
+* “Sinking” of houses and buildings.
+
+* Breaking of underground pipelines and utilities.
+
+* Malfunction of sewerage and drainage system 
+ 
+* Deterioration in function of building and infrastructures
+
+]
+
+.panel[.panel-name[Environment]
+
+* Changes in river canal and drain flow systems indirect.
+
+* Frequent coastal flooding.
+
+* Wider expansion of flooding areas. 
+
+* Inundated areas and infrastructures.
+
+* Increased inland sea water intrusion.
+
+* Deterioration in quality of environmental condition
+
+]
+
+.panel[.panel-name[Economic]
+
+* Increase in maintenance cost of infrastructure.
+
+* decrease in land and property values.
+
+* Abandoned buildings and facilities.
+
+* Disruption to economic activities
+]
+
+.panel[.panel-name[Social]
+
+* Deterioration in quality of living environment and life health and 
+
+
+* disruprion to daily activities of people.
+]
+]
+
+---
+
+## Criticism to the wall approach
+.pull-left[
+* Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Nunn et al., 2021)
+
+* It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
+
+* High cost of construction and maintenance. 
+
+* Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
+]
+
+.pull-right[
+
+* Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches.
+
+* The build of the sea wall can have a terrible impact on the socio-economic aspect of Jakarta city.
+
+]
+---
+
 ## Global agendas and goals 1
 ###  The Sendai Framework for Disaster Risk Reduction (2015)
 
@@ -211,78 +303,15 @@ class: center, middle, inverse, title-slide
 ]
 
 ---
-![](jakarta_sinking_animated.gif)&lt;!-- --&gt;
 
 
 
-## Causes of Subsidence
+## Compliance with the agenda
 
-* Physical factors for land subsidence: earthquakes (Indonesia is locating above the destructive plate boundaries where earthquakes happened frequently) (Bott et al., 2021).
 
-* Human/ social factor for land subsidence: groundwater extraction, rapid urban development, improper agricultural practices (Adibin et al., 2011)
-
-* Natural consolidation of alluvium soil, load of infrastructures and constructions, and tectonic activities 
 
 ---
 
-
-## Impact of land subsidence  
-
-.panelset[
-
-.panel[.panel-name[Infrastructure]
-
-* Cracking of permanent constructions and roads.
-
-* Tilting of houses and buildings.
-
-* “Sinking” of houses and buildings.
-
-* Breaking of underground pipelines and utilities.
-
-* Malfunction of sewerage and drainage system 
- 
-* Deterioration in function of building and infrastructures
-
-]
-
-.panel[.panel-name[Environment]
-
-* Changes in river canal and drain flow systems indirect.
-
-* Frequent coastal flooding.
-
-* Wider expansion of flooding areas. 
-
-* Inundated areas and infrastructures.
-
-* Increased inland sea water intrusion.
-
-* Deterioration in quality of environmental condition
-
-]
-
-.panel[.panel-name[Economic]
-
-* Increase in maintenance cost of infrastructure.
-
-* decrease in land and property values.
-
-* Abandoned buildings and facilities.
-
-* Disruption to economic activities
-]
-
-.panel[.panel-name[Social]
-
-* Deterioration in quality of living environment and life health and 
-
-
-* disruprion to daily activities of people.
-]
-]
-
----
 
 
 ## Benefits to Addressing Land Subsidence
@@ -295,28 +324,10 @@ class: center, middle, inverse, title-slide
 
 - Protection of businesses and industry such as coastal tourism. 
 
-- To avoid damage of infrastructure 
+- To ensure clean groundwater supply by avoiding seawater intrusion to groundwater table
 
 ---
-## Criticism to the wall approach
-.pull-left[
-* Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Nunn et al., 2021)
 
-* It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
-
-* High cost of construction and maintenance. 
-
-* Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
-]
-
-.pull-right[
-
-* Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches.
-
-* The build of the sea wall can have a terrible impact on the socio-economic aspect of Jakarta city.
-
-]
----
 
 
 ## Objectives
@@ -519,7 +530,7 @@ Susceptibility Map
 
 &lt;img src="eg_susceptibility.png" width="90%" style="display: block; margin: auto;" /&gt;
 
-From: [Gharechaee, Samani, Sigaroodi et al. (2023)](#bib-gharechaeeLandSubsidenceSusceptibility2023)
+From: &lt;a name=cite-gharechaeeLandSubsidenceSusceptibility2023&gt;&lt;/a&gt;[Gharechaee, Samani, Sigaroodi, Baloochiyan, Moosavi, Hubbart, and Sadeghi (2023)](#bib-gharechaeeLandSubsidenceSusceptibility2023)
 
 ]
 
@@ -529,7 +540,7 @@ Risk Map
 
 &lt;img src="eg_risk.png" width="87%" style="display: block; margin: auto;" /&gt;
 
-From: [Bhattarai and Kondoh (2017)](#bib-bhattaraiRiskAssessmentLand2017)
+From: &lt;a name=cite-bhattaraiRiskAssessmentLand2017&gt;&lt;/a&gt;[Bhattarai and Kondoh (2017)](#bib-bhattaraiRiskAssessmentLand2017)
 ]
 
 
