Gantt chart formatting

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x48cb28ba91d441290ef48ad416adad7","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"eb5b0981893f430386f25abcb48f7459","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -569,22 +569,16 @@ class: center, top
 
 ## Project: Gantt Chart
 
-Jakarta Susceptibility/ Risk Assessment Gantt Chart
-- Experts: TL&lt;sup&gt;1&lt;/sup&gt;, LDA&lt;sup&gt;2&lt;/sup&gt;, GE&lt;sup&gt;3&lt;/sup&gt;, GO&lt;sup&gt;4&lt;/sup&gt;, WRE&lt;sup&gt;5&lt;/sup&gt;, NO&lt;sup&gt;6&lt;/sup&gt;.
+**Experts: TL&lt;sup&gt;1&lt;/sup&gt;, LDA&lt;sup&gt;2&lt;/sup&gt;, GE&lt;sup&gt;3&lt;/sup&gt;, GO&lt;sup&gt;4&lt;/sup&gt;, WRE&lt;sup&gt;5&lt;/sup&gt;, NO&lt;sup&gt;6&lt;/sup&gt;.**
 
-&lt;img src="GC.jpg" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="GC.jpg" width="80%" style="display: block; margin: auto;" /&gt;
 .footnote[
-.pull-left[
-- [1] Team Leader
-- [2] Lead Data Analyst
-- [3] Geo-spatial Expert
+[1] Team Leader [2] Lead Data Analyst [3] Geo-spatial Expert [4] Geologist 
+
+[5] Water Resource Expert [6] Nodal Officer
+
 ]
-.pull-right[
-- [4] Geologist
-- [5] Water Resource Expert
-- [6] Nodal Officer
-]
-]
+
 
 ---
 class: center, top
