--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"eb5b0981893f430386f25abcb48f7459","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x1a2db03c74842389ba53fb99d402bf4","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -536,7 +536,7 @@ Susceptibility Map
 
 &lt;img src="eg_susceptibility.png" width="90%" style="display: block; margin: auto;" /&gt;
 
-From: &lt;a name=cite-gharechaeeLandSubsidenceSusceptibility2023&gt;&lt;/a&gt;[Gharechaee, Samani, Sigaroodi, Baloochiyan, Moosavi, Hubbart, and Sadeghi (2023)](#bib-gharechaeeLandSubsidenceSusceptibility2023)
+From: [Gharechaee, Samani, Sigaroodi et al. (2023)](#bib-gharechaeeLandSubsidenceSusceptibility2023)
 
 ]
 
@@ -546,7 +546,7 @@ Risk Map
 
 &lt;img src="eg_risk.png" width="87%" style="display: block; margin: auto;" /&gt;
 
-From: &lt;a name=cite-bhattaraiRiskAssessmentLand2017&gt;&lt;/a&gt;[Bhattarai and Kondoh (2017)](#bib-bhattaraiRiskAssessmentLand2017)
+From: [Bhattarai and Kondoh (2017)](#bib-bhattaraiRiskAssessmentLand2017)
 ]
 
 
@@ -697,7 +697,7 @@ class: center, top
 
 - The urgency of municipal disaster risk reduction lies on mitigating subsidence and not protecting against sea level rise (SLR).
 
-Problem of ML
+- Problem of ML
 ]
 
 ---
